[gd_scene format=3 uid="uid://ddxrls0igr1gq"]

[ext_resource type="Script" uid="uid://dj7qq7lu5tqw4" path="res://music/music_player.gd" id="1_ig22l"]
[ext_resource type="AudioStream" uid="uid://22h6k3yiingv" path="res://music/Strangers-Journey-Maintheme.ogg" id="2_2rvia"]
[ext_resource type="AudioStream" uid="uid://dgq2eo3djs0h8" path="res://music/Strangers Journey Event.ogg" id="2_4x5lp"]
[ext_resource type="AudioStream" uid="uid://bl47moi8l2bgj" path="res://music/Szene-01-Lagerambiente 03-LOOP-SOLO.ogg" id="3_2rvia"]
[ext_resource type="AudioStream" uid="uid://c3y8gu8nu5rmf" path="res://music/Szene-04-Kutsche-LOOP-SOLO.ogg" id="4_8lism"]

[node name="MusicPlayer" type="Node2D" unique_id=1601014204]
script = ExtResource("1_ig22l")

[node name="main_music" type="AudioStreamPlayer" parent="." unique_id=755996824]
stream = ExtResource("2_2rvia")

[node name="camp_ambience" type="AudioStreamPlayer" parent="." unique_id=1895573579]
stream = ExtResource("3_2rvia")

[node name="travel_ambience" type="AudioStreamPlayer" parent="." unique_id=680990404]
stream = ExtResource("4_8lism")

[node name="event_music" type="AudioStreamPlayer" parent="." unique_id=2103771168]
stream = ExtResource("2_4x5lp")

[connection signal="finished" from="main_music" to="." method="_on_main_music_finished"]
[connection signal="finished" from="camp_ambience" to="." method="_on_camp_ambience_finished"]
[connection signal="finished" from="travel_ambience" to="." method="_on_travel_ambience_finished"]
[connection signal="finished" from="event_music" to="." method="_on_event_music_finished"]
